# freebsd-powertools

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: python-ci.yml
py/: pyproject.toml
py/src/freebsd_powertools/get_pkg_dependencies/: __main__.py
py/src/freebsd_powertools/gmake_to_json/: __main__.py
py/src/freebsd_powertools/lib/: logging.py
py/src/freebsd_powertools/openssl_target_json_to_world_mk/: __main__.py
shell/: build-devroot.sh  chrootme  freefall_tinderbox.sh  manpage_Dd_bump.sh  update_openssl.sh
shell/freefall-dev/: git-clone.sh  tinderbox.sh
shell/mfsbsd/: MAC  NGIE_MAC  build.sh  flash-image.sh
